add few components, sign-up sign-in page without functional. Add vue-router

--- a/src/assets/scss/_profile.scss
+++ b/src/assets/scss/_profile.scss
@@ -155,14 +155,14 @@
     padding: 6px 14px 6px 14px;
 
     &-icon {
-      background-image: url(../img/geo.svg); 
+      // background-image: url(../img/geo.svg); 
       background-repeat: no-repeat;
       background-position: bottom 11px left 14px;
       padding-left: 30px;
     }
 
     &-mobile {
-      background-image: url(../img/turk.svg); 
+      // background-image: url(../img/turk.svg); 
       background-repeat: no-repeat;
       background-position: bottom 10px left 18px;
       width: 80px;
